--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 #view {
-    background-color="red";
+    background-color:"red";
 }
 #header-nav {
     background-color: #AAA5A5;
