--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 #view {
-    background-color: red;
+    background-color: #1af399;
 }
 #header-nav {
     background-color: #AAA5A5;
