--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@
 
 #text {       
     margin: 10px;
-    radius: 2;
+    border-radius: 2;
     background-color: #aa49ce;
     font-family: 'Alfa Slab One';   
     position: relative;
