--- a/css/styles.css
+++ b/css/styles.css
@@ -56,11 +56,11 @@
     color: black;
     font-family: 'Alfa Slab One';
     font-weight: 100;
-    background-color: #AAA5A5;
+    background-color: #fb9c30;
 }
 
 #nav-list a:hover {
-    background-color: #AEAE52;   
+    background-color: #2abee0;   
 }
 
 .navbar-default .navbar-collapse {
