--- a/css/styles.css
+++ b/css/styles.css
@@ -56,8 +56,7 @@
     color: black;
     font-family: 'Alfa Slab One';
     font-weight: 100;
-    background-color: #191511;
-    opacity: 0.5;
+    background-color: #a7713b;
 }
 
 #nav-list a:hover {
